should fix h-overflow on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ section {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
 /*Mobile Screen Sizes*/
@@ -29,6 +29,9 @@ section {
     main {
         display: flex;
         flex-direction: column;
+    }
+    section {
+        margin: 10px 0;
     }
     
     #info-block {
@@ -49,6 +52,9 @@ section {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+    }
+    section {
+        margin: 10px;
     }
 
     #info-block {
